code/tests/old_bugs/issue115.kai

main :: fn() -> void {
    x: u64
    y := &x == nil
    // error: 'nil' requires a contextual type
}

